--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.12.2",
+    "@types/ws": "8.5.10",
     "eslint": "8.57.0",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
     "typescript": "5.4.3"
   },
   "dependencies": {
+    "@fastify/websocket": "10.0.1",
     "dotenv": "16.4.5",
+    "fastify": "4.26.2",
     "reflect-metadata": "0.2.2",
     "tsyringe": "4.8.0",
     "zod": "3.22.4"
