--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/node": "20.12.2",
     "@types/ws": "8.5.10",
     "eslint": "8.57.0",
+    "fastify-tsconfig": "2.0.0",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
     "typescript": "5.4.3"
   },
   "dependencies": {
+    "@fastify/cookie": "9.3.1",
     "@fastify/websocket": "10.0.1",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
